Fix bug permettant de pouvoir simuler plusieurs mondes à la suite.